# rtmcpp

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  premake5.lua
Include/rtmcpp/: Common.hpp  Conversion.hpp  Core.hpp  Matrix.hpp  MatrixOps.hpp  PackedMatrix.hpp  PackedVector.hpp  Quat.hpp  QuatOps.hpp  Scalar.hpp  TRS.hpp  Transforms.hpp  Vector.hpp  VectorOps.hpp
Source/: rtmcpp.ixx
Tests/: CMakeLists.txt  Main.cpp  Main.ixx
